PLANET-7222 Fix Donate button menu dropdown alignment
Otherwise it goes off screen in large sizes

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -289,6 +289,18 @@ a.nav-link:hover:before,
   }
 }
 
+.nav-donate .nav-submenu {
+  @include large-and-less {
+    right: 68px;
+    left: auto;
+
+    html[dir="rtl"] & {
+      left: 68px;
+      right: auto;
+    }
+  }
+}
+
 .nav-menu-toggle {
   background: transparent;
   border: none;
